--- a/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/ActiveView.xaml
@@ -2,6 +2,7 @@
     x:Class="WBNEWANSWEARS.MVVM.View.ActiveView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:WBNEWANSWEARS.MVVM.View"
@@ -29,11 +30,17 @@
             </StackPanel>
             <Grid Grid.Row="1">
                 <ListBox
+                    x:Name="UserListBox"
                     d:ItemsSource="{d:SampleData ItemCount=10}"
                     ItemContainerStyle="{StaticResource ListBoxItemCustomStyle}"
                     ItemsSource="{Binding Users}"
                     SelectionMode="Multiple"
                     Style="{StaticResource ListBoxCustomStyle}">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="SelectionChanged">
+                            <b:InvokeCommandAction Command="{Binding ToggleAnswer}" CommandParameter="{Binding ElementName=UserListBox}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Border Style="{StaticResource ActiveViewCardStyle}">
@@ -76,8 +83,12 @@
                                         Margin="10,5,10,5"
                                         Background="LimeGreen"
                                         CornerRadius="5"
-                                        Cursor="Hand"
-                                        MouseLeftButtonDown="Border_MouseLeftButtonDown">
+                                        Cursor="Hand">
+                                        <b:Interaction.Triggers>
+                                            <b:EventTrigger EventName="PreviewMouseDown">
+                                                <b:InvokeCommandAction Command="{Binding DataContext.StartSingleAnswer, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="{Binding}" />
+                                            </b:EventTrigger>
+                                        </b:Interaction.Triggers>
                                         <iconPacks:PackIconMaterial
                                             Width="24"
                                             Height="24"
@@ -108,15 +119,19 @@
                 Orientation="Horizontal">
                 <Border
                     Width="auto"
-                    Padding="0,10,15,10"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Background="#7469B6"
                     CornerRadius="10"
                     Cursor="Hand">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="PreviewMouseDown">
+                            <b:InvokeCommandAction Command="{Binding StartAnswer}" CommandParameter="{Binding ElementName=UserListBox}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
                     <StackPanel Orientation="Horizontal">
                         <Border
-                            Margin="10,0,10,0"
+                            Margin="10,0,0,0"
                             VerticalAlignment="Center"
                             CornerRadius="5"
                             Cursor="Hand">
@@ -139,6 +154,8 @@
                         </Border>
                         <TextBlock
                             Margin="0"
+                            Padding="5,10,10,10"
+                            Cursor="Hand"
                             Style="{StaticResource ActiveViewBottomText}"
                             Text="Запустить" />
                     </StackPanel>
@@ -147,7 +164,13 @@
                     Margin="20,0,0,0"
                     Style="{StaticResource ActiveViewBottomText}"
                     Text="Выбрать всех"
-                    TextDecorations="underline" />
+                    TextDecorations="underline">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="PreviewMouseDown">
+                            <b:InvokeCommandAction Command="{Binding SelectAllUsersCommand}" CommandParameter="{Binding ElementName=UserListBox}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </TextBlock>
             </StackPanel>
         </Grid>
     </Border>
