--- a/WBNEWANSWEARS/MVVM/View/HomeView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/HomeView.xaml
@@ -32,7 +32,10 @@
                 Margin="0,24,12,24"
                 Style="{StaticResource FavsScrollViewer}"
                 VerticalScrollBarVisibility="Auto">
-                <ItemsControl Padding="12,0,0,0" ItemsSource="{Binding Cards}" d:ItemsSource="{d:SampleData ItemCount=15}">
+                <ItemsControl
+                    Padding="12,0,0,0"
+                    d:ItemsSource="{d:SampleData ItemCount=15}"
+                    ItemsSource="{Binding Cards}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel HorizontalAlignment="Center" Orientation="Horizontal" />
@@ -61,14 +64,24 @@
                                     </Grid>
                                 </Border>
                                 <Border Style="{StaticResource CardUnderSectionStyle}">
-                                    <iconPacks:PackIconMaterial
+                                    <TextBlock
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Foreground="#FFE6E6">
+                                        <Run Text="Не отвечено на" />
+                                        <Bold>
+                                            <Run Text="{Binding UnansweredCount}" />
+                                        </Bold>
+                                        <Run Text="шт." />
+                                    </TextBlock>
+                                    <!--<iconPacks:PackIconMaterial
                                         Width="28"
                                         Height="28"
                                         HorizontalAlignment="Center"
                                         VerticalAlignment="Center"
                                         Cursor="Hand"
                                         Foreground="LimeGreen"
-                                        Kind="PlayBox" />
+                                        Kind="PlayBox" />-->
                                 </Border>
                             </StackPanel>
                         </DataTemplate>
