--- a/WBNEWANSWEARS/App.xaml
+++ b/WBNEWANSWEARS/App.xaml
@@ -656,7 +656,7 @@
                             <Border
                                 x:Name="CheckMark"
                                 Margin="5"
-                                Background="White"
+                                Background="white"
                                 CornerRadius="2"
                                 Visibility="Collapsed" />
                         </Border>
@@ -670,6 +670,153 @@
             </Setter>
         </Style>
 
+        <ControlTemplate x:Key="ComboBoxToggleButtonTemplate" TargetType="ToggleButton">
+            <Grid>
+                <Border
+                    Name="Border"
+                    Width="20"
+                    Height="20"
+                    Background="#69619B"
+                    CornerRadius="5" />
+            </Grid>
+            <ControlTemplate.Triggers>
+                <Trigger Property="UIElement.IsEnabled" Value="False">
+                    <Setter TargetName="Border" Property="Panel.Background" Value="#888" />
+                    <Setter Property="TextElement.Foreground" Value="#888" />
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
 
+        <Style x:Key="ComboBoxFlatStyle" TargetType="{x:Type ComboBox}">
+            <Setter Property="UIElement.SnapsToDevicePixels" Value="True" />
+            <Setter Property="FrameworkElement.OverridesDefaultStyle" Value="True" />
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
+            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="ScrollViewer.CanContentScroll" Value="True" />
+            <Setter Property="TextElement.Foreground" Value="White" />
+            <Setter Property="FrameworkElement.FocusVisualStyle" Value="{x:Null}" />
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBox">
+                        <Grid>
+                            <ToggleButton
+                                Name="ToggleButton"
+                                ClickMode="Press"
+                                Focusable="False"
+                                IsChecked="{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+                                Template="{StaticResource ComboBoxToggleButtonTemplate}" />
+
+                            <ContentPresenter
+                                Name="ContentSite"
+                                Margin="5,0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Content="{TemplateBinding ComboBox.SelectionBoxItem}"
+                                ContentTemplate="{TemplateBinding ComboBox.SelectionBoxItemTemplate}"
+                                ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                IsHitTestVisible="False" />
+                            <TextBox
+                                Name="PART_EditableTextBox"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                Background="Transparent"
+                                Focusable="True"
+                                IsReadOnly="{TemplateBinding IsReadOnly}"
+                                Visibility="Hidden">
+                                <TextBox.Template>
+                                    <ControlTemplate TargetType="TextBox">
+                                        <Border Name="PART_ContentHost" Focusable="False" />
+                                    </ControlTemplate>
+                                </TextBox.Template>
+                            </TextBox>
+                            <Popup
+                                Name="Popup"
+                                AllowsTransparency="True"
+                                Focusable="False"
+                                IsOpen="{TemplateBinding ComboBox.IsDropDownOpen}"
+                                Placement="Bottom"
+                                PopupAnimation="Slide">
+                                <Grid
+                                    Name="DropDown"
+                                    MinWidth="{TemplateBinding FrameworkElement.ActualWidth}"
+                                    MaxHeight="{TemplateBinding ComboBox.MaxDropDownHeight}"
+                                    SnapsToDevicePixels="True">
+                                    <Border
+                                        Name="DropDownBorder"
+                                        Margin="0,2,0,0"
+                                        Background="#69619B"
+                                        CornerRadius="2" />
+                                    <ScrollViewer
+                                        Margin="0,2"
+                                        HorizontalAlignment="Center"
+                                        SnapsToDevicePixels="True">
+                                        <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained" />
+                                    </ScrollViewer>
+                                </Grid>
+                            </Popup>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="ItemsControl.HasItems" Value="False">
+                                <Setter TargetName="DropDownBorder" Property="FrameworkElement.MinHeight" Value="95" />
+                            </Trigger>
+                            <Trigger Property="UIElement.IsEnabled" Value="False">
+                                <Setter Property="TextElement.Foreground" Value="#888" />
+                            </Trigger>
+                            <Trigger Property="ItemsControl.IsGrouping" Value="True">
+                                <Setter Property="ScrollViewer.CanContentScroll" Value="False" />
+                            </Trigger>
+                            <Trigger Property="ComboBox.IsEditable" Value="True">
+                                <Setter Property="KeyboardNavigation.IsTabStop" Value="False" />
+                                <Setter TargetName="PART_EditableTextBox" Property="UIElement.Visibility" Value="Visible" />
+                                <Setter TargetName="ContentSite" Property="UIElement.Visibility" Value="Hidden" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="{x:Type ComboBoxItem}">
+            <Setter Property="Padding" Value="4,2" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="TextElement.Foreground" Value="White" />
+            <Setter Property="Control.SnapsToDevicePixels" Value="True" />
+            <Setter Property="Control.FocusVisualStyle" Value="{x:Null}" />
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBoxItem">
+                        <Border
+                            Name="Border"
+                            Padding="{TemplateBinding Control.Padding}"
+                            Background="{TemplateBinding Control.Background}"
+                            BorderBrush="{TemplateBinding Border.BorderBrush}"
+                            BorderThickness="0,0,0,0">
+                            <ContentPresenter
+                                HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}"
+                                VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}"
+                                SnapsToDevicePixels="{TemplateBinding Control.SnapsToDevicePixels}" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="ComboBoxItem.IsHighlighted" Value="True">
+                                <Setter TargetName="Border" Property="Panel.Background" Value="#FFE6E6" />
+                                <Setter TargetName="Border" Property="TextElement.Foreground" Value="#8179B3" />
+                                <Setter TargetName="Border" Property="CornerRadius" Value="2" />
+                            </Trigger>
+                            <Trigger Property="ComboBoxItem.IsSelected" Value="True">
+                                <Setter Property="TextElement.Foreground" Value="White" />
+                                <Setter TargetName="Border" Property="Border.BorderBrush" Value="White" />
+                                <Setter TargetName="Border" Property="Border.BorderThickness" Value="0,0,0,2" />
+                            </Trigger>
+                            <Trigger Property="UIElement.IsEnabled" Value="False">
+                                <Setter Property="TextElement.Foreground" Value="#888" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
