--- a/WBNEWANSWEARS/MVVM/View/SettingsView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/SettingsView.xaml
@@ -2,6 +2,7 @@
     x:Class="WBNEWANSWEARS.MVVM.View.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:WBNEWANSWEARS.MVVM.View"
@@ -71,12 +72,22 @@
                         VerticalAlignment="Center"
                         Orientation="Horizontal">
                         <Border Margin="0,0,5,0" Style="{StaticResource AddAndDeleteButtonsBorder}">
+                            <b:Interaction.Triggers>
+                                <b:EventTrigger EventName="PreviewMouseDown">
+                                    <b:InvokeCommandAction Command="{Binding DataContext.AddUser, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="{Binding}" />
+                                </b:EventTrigger>
+                            </b:Interaction.Triggers>
                             <iconPacks:PackIconMaterial
                                 Cursor="Hand"
                                 Kind="Plus"
                                 Style="{StaticResource AddAndDeleteButtonsIcon}" />
                         </Border>
                         <Border Margin="5,0,0,0" Style="{StaticResource AddAndDeleteButtonsBorder}">
+                            <b:Interaction.Triggers>
+                                <b:EventTrigger EventName="PreviewMouseDown">
+                                    <b:InvokeCommandAction Command="{Binding DataContext.RemoveUser, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="{Binding}" />
+                                </b:EventTrigger>
+                            </b:Interaction.Triggers>
                             <iconPacks:PackIconMaterial Kind="Minus" Style="{StaticResource AddAndDeleteButtonsIcon}" />
                         </Border>
                     </StackPanel>
@@ -151,9 +162,9 @@
                                                             HorizontalAlignment="Center"
                                                             VerticalAlignment="Center"
                                                             FontSize="16"
-                                                            Foreground="#FFE6E6"
                                                             ItemsSource="{Binding DataContext.PriorityNumbers, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                                             SelectedItem="{Binding Priority}"
+                                                            Style="{StaticResource ComboBoxFlatStyle}"
                                                             Text="10" />
                                                         <Border
                                                             Grid.Column="1"
@@ -188,6 +199,11 @@
                         Grid.Column="2"
                         Padding="15,10"
                         Style="{StaticResource AddAndDeleteButtonsBorder}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="PreviewMouseDown">
+                                <b:InvokeCommandAction Command="{Binding DataContext.SaveUser, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="{Binding}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
                         <TextBlock
                             Margin="0"
                             FontSize="14"
